--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,2 @@
 language: csharp
-solution: DynNetMessagingProtocol.sln
-install:
-  - nuget restore DynNetMessagingProtocol.sln
-  - nuget install NUnit.Console -Version 3.9.0 -OutputDirectory testrunner
-script:
-  - msbuild /p:Configuration=Release DynNetMessagingProtocol.sln
-  - mono ./testrunner/NUnit.ConsoleRunner.3.9.0/tools/nunit3-console.exe ./DynNetLib.Tests/bin/Release/DynNetLib.Tests.dll
+solution: DNMPWindowsClient.sln
