--- a/DNMPWindowsClient/DNMPWindowsClient.csproj
+++ b/DNMPWindowsClient/DNMPWindowsClient.csproj
@@ -91,6 +91,11 @@
     <Compile Include="MainConfig.cs" />
     <Compile Include="MimeTypeHelper.cs" />
     <Compile Include="NetworkManager.cs" />
+    <Compile Include="PacketParser\ArpPacket.cs" />
+    <Compile Include="PacketParser\DummyPacket.cs" />
+    <Compile Include="PacketParser\EthernetPacket.cs" />
+    <Compile Include="PacketParser\IPv4Packet.cs" />
+    <Compile Include="PacketParser\IPacket.cs" />
     <Compile Include="PortMapper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
