--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: csharp
 solution: DNMPWindowsClient.sln
+before_install:
+  - apt-get install -y nsis
 install:
   - nuget restore DNMPWindowsClient.sln
   - nuget install NUnit.Console -Version 3.9.0 -OutputDirectory testrunner
-  - apt install nsis
 script:
   - msbuild /p:Configuration=Release DNMPWindowsClient.sln
   - makensis NSIS/script.nsis
