--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: csharp
 solution: DNMPWindowsClient.sln
 before_install:
-  - apt-get install -y nsis
+  - sudo apt-get update
+  - sudo apt-get install -y nsis
 install:
   - nuget restore DNMPWindowsClient.sln
   - nuget install NUnit.Console -Version 3.9.0 -OutputDirectory testrunner
