--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ install:
   - nuget install NUnit.Console -Version 3.9.0 -OutputDirectory testrunner
 script:
   - msbuild /p:Configuration=Release DNMPWindowsClient.sln
-  - makensis NSIS/script.nsis
+  - makensis NSIS/script.nsi
