--- a/DNMPWindowsClient/DNMPWindowsClient.csproj
+++ b/DNMPWindowsClient/DNMPWindowsClient.csproj
@@ -92,8 +92,10 @@
     <Compile Include="MimeTypeHelper.cs" />
     <Compile Include="NetworkManager.cs" />
     <Compile Include="PacketParser\ArpPacket.cs" />
+    <Compile Include="PacketParser\DhcpPacket.cs" />
     <Compile Include="PacketParser\DummyPacket.cs" />
     <Compile Include="PacketParser\EthernetPacket.cs" />
+    <Compile Include="PacketParser\InvalidPacketException.cs" />
     <Compile Include="PacketParser\IPv4Packet.cs" />
     <Compile Include="PacketParser\IPacket.cs" />
     <Compile Include="PacketParser\UdpPacket.cs" />
