--- a/DNMPWindowsClient/DNMPWindowsClient.csproj
+++ b/DNMPWindowsClient/DNMPWindowsClient.csproj
@@ -88,6 +88,7 @@
   <ItemGroup>
     <Compile Include="Base32.cs" />
     <Compile Include="ConfigJsonConverter.cs" />
+    <Compile Include="DomainNameUtil.cs" />
     <Compile Include="MainConfig.cs" />
     <Compile Include="MimeTypeHelper.cs" />
     <Compile Include="NetworkManager.cs" />
