--- a/DnmpNetworkClient/packages.config
+++ b/DnmpNetworkClient/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="LumiSoft.Net" version="2.0.4492.11923" targetFramework="net461" />
+  <package id="Mono.Posix-4.5" version="4.5.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="NLog" version="4.5.11" targetFramework="net45" />
   <package id="Open.NAT" version="2.1.0.0" targetFramework="net461" />
