--- a/DnmpNetworkClient/NLog.config
+++ b/DnmpNetworkClient/NLog.config
@@ -14,6 +14,7 @@
     <target name="file"
             xsi:type="File"
             fileName="${basedir}/logs/log.current.txt"
+            encoding="utf-8"
             layout="[${date:format=dd.MM.yyyy HH\:mm\:ss}] [${level}] ${message} ${exception:format=tostring}"
             archiveFileName="${basedir}/logs/archives/log.${shortdate}.{#}.txt"
             archiveAboveSize="5242880"
